python-wrapt (1.9.0-2) unstable; urgency=medium

  [ Ondřej Nový ]
  * Fixed VCS URLs (https).
  * d/rules: Changed UPSTREAM_GIT protocol to https

  [ Thomas Goirand ]
  * Removed non-active maintainers.
  * Reviewed (build-)depends and ran wrap-and-sort -t -a.

 -- Thomas Goirand <zigo@debian.org>  Fri, 09 Sep 2016 08:05:11 +0000

python-wrapt (1.9.0-1) unstable; urgency=medium

  * New upstream release (Closes: #765064):
    - Drop do-not-use-embedded-six.py.patch and
      no-from-wrapt-import-six-in-tests.patch, as src/six.py is gone upstream.
    - Drop fix-python-3.4-compat.patch applied upstream.
    - Drop python-3.2-compat.patch as upstream isn't using embeddded six.
  * Standards-Version is now 3.9.6 (no change).

 -- Thomas Goirand <zigo@debian.org>  Tue, 14 Oct 2014 00:01:48 +0800

python-wrapt (1.8.0-5) unstable; urgency=medium

  * Added do-not-run-test_proxy_attribute.patch to avoid FTBFS. Thanks to David
    Suárez <david.sephirot@gmail.com> for the bug report (Closes: #755325).

 -- Thomas Goirand <zigo@debian.org>  Sat, 26 Jul 2014 07:37:40 +0000

python-wrapt (1.8.0-4) unstable; urgency=medium

  * wrapt is of arch "any" and not "all", therefore all the build-depends-indep
    should be in build-depends. This upload fixes that.

 -- Thomas Goirand <zigo@debian.org>  Sun, 08 Jun 2014 23:34:47 +0800

python-wrapt (1.8.0-3) unstable; urgency=medium

  * Added missing depends on python-six / python3-six (Closes: #750579).

 -- Thomas Goirand <zigo@debian.org>  Sun, 08 Jun 2014 14:17:01 +0000

python-wrapt (1.8.0-2) unstable; urgency=medium

  * Moves python-sphinx to build-depends instead of build-depends-indep.
    (Closes: #750579).

 -- Thomas Goirand <zigo@debian.org>  Thu, 05 Jun 2014 06:35:41 +0000

python-wrapt (1.8.0-1) unstable; urgency=low

  * Initial release. (Closes: #749594)

 -- Thomas Goirand <zigo@debian.org>  Wed, 28 May 2014 16:33:31 +0800